<resources>
    <string name="app_name">NewsReader</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_show_newsgroups">Newsgroups</string>

    <string name="server_add">Add News Server</string>
    <string name="servertitle">Title</string>
    <string name="servertitle_hint">Default: same as server</string>
    <string name="serverName">Server: %1$s</string>
    <string name="server_hint">news.example.com</string>
    <string name="port">Port</string>
    <string name="port_hint">Default: 119</string>
    <string name="port_hint_ssl">Default: 563</string>
    <string name="authenticate">With authentication</string>
    <string name="user">Username</string>
    <string name="user_hint">user@example.com</string>
    <string name="password">Password</string>
    <string name="password_hint">Your password</string>
    <string name="connect">Connect</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="error_empty_field">Empty not allowed here</string>
    <string name="error_connection">Sorry for that &#8230; network or server error!</string>
    <string name="error_password">Couldn\'t connect to news server -  wrong user or password!</string>
    <string name="error_offline">You are offline! Please connect to the internet and try again!</string>
    <string name="success_connect_server">Strike! Connection test successful ;)</string>
    <string name="success_adding_server">Successfully added news server! Happy posting ;)</string>
    <string name="success_modifying_server">Successfully modified news server!</string>

    <string name="server_settings">Server Settings</string>
    <string name="name">Name</string>
    <string name="name_hint">User</string>
    <string name="email">E-Mail</string>
    <string name="email_hint">user@example.com</string>
    <string name="signature">Signature</string>
    <string name="signature_hint"> Newsreader for Android (Alpha) http://random-access.org/newsreader/</string>
    <string name="msg_keep">Keep messages</string>
    <string name="msg_keepload_hint">Default: 30</string>
    <string name="msg_load">Load messages</string>

    <string name="server_delete">Delete server</string>
    <string name="select_newsgroups">Select newsgroups</string>

    <string name="subscriptions">Subscriptions: %1$d</string>
    <string name="search_subscription">Type to search&#8230;</string>
    <string name="newsgroup_settings">Newsgroup Settings</string>
    <string name="success_modifying_group">Successfully modified newsgroup!</string>

    <string name="discard">Discard</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string name="show">Show</string>
    <string name="selected">Currently selected</string>
    <string name="all">All</string>

    <string name="delete">Delete</string>

    <string name="cmd_selected" translatable="false">:selected</string>

    <string name="title_activity_show_messages">Messages</string>
    <string name="title_activity_show_single_article">Message</string>

    <string name="mark_as_read">Mark as read</string>
    <string name="mark_as_unread">Mark as unread</string>
    <string name="select_all">Select all</string>

    <string name="title_msg_header">Message header</string>
    <string name="new_message">New message</string>

    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="subject">Subject:</string>
    <string name="enter_subject">Enter subject</string>
    <string name="enter_message">Enter message</string>
    <string name="send">Send message</string>
    <string name="reply">Re:</string>
    <string name="sent_from">On %1$s at %2$s %3$s wrote: </string> -->

    <!-- Plurals -->
    <plurals name="really_delete_server">
        <item quantity="one">Really delete news server?</item> ,
        <item quantity="other">Really delete %d news server?</item>
    </plurals>
    <plurals name="deleted_server">
        <item quantity="one">News server deleted.</item> ,
        <item quantity="other">%d news server deleted.</item>
    </plurals>

    <plurals name="success_add_groups">
        <item quantity="one">Successfully subscribed to %d newsgroup</item>
        <item quantity="other">Successfully subscribed to %d newsgroups</item>
    </plurals>

    <plurals name="delete_groups">
        <item quantity="one">unsubscribed from %d newsgroup</item>
        <item quantity="other">unsubscribed from %d newsgroups</item>
    </plurals>

    <plurals name="new_news">
        <item quantity="one">%d new article!</item>
        <item quantity="other">%d new articles!</item>
    </plurals>

    <!-- StringArrays -->
    <string name="sync_prompt_initial">Default period for download</string>
    <string name="sync_prompt_period">Download period</string>
    <string name="sync_prompt_keep">Keep messages</string>
    <string-array name="sync_period_entries">
        <item>2 Weeks</item>
        <item>1 Month</item>
        <item>3 Months</item>
        <item>6 Months</item>
        <item>1 Year</item>
        <item>3 Year</item>
        <item>All</item>
    </string-array>
    <integer-array name="sync_period_values">
        <item>14</item>
        <item>30</item>
        <item>90</item>
        <item>180</item>
        <item>360</item>
        <item>1080</item>
        <item>-1</item>
    </integer-array>

    <!-- Preferences -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_sync_title">Synchronization settings</string>
    <string name="pref_sync_interval_text">Synchronization interval</string>
    <string name="pref_sync_interval_default" translatable="false">30</string>
    <string-array name="pref_sync_interval_entries">
        <item>2 minutes (DEBUG ONLY)</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>12 hours</item>
        <item>1 day</item>
    </string-array>
    <string-array name="pref_sync_interval_values" translatable="false">
        <item>2</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>720</item>
        <item>1440</item>
    </string-array>

    <string name="pref_wlan_only_text">Sync only via WIFI</string>
    <string name="pref_wlan_only_summary">Syncing only via WIFI prevents you from additional costs</string>

    <string name="pref_notify_on_sync_text">Enable notifications</string>
    <string name="pref_notify_on_sync_summary">Allow NewsReader to display a notification if new messages were fetched on a sync</string>

    <!-- Preferences Messages -->
    <string name="pref_message_title">Message settings</string>
    <string name="pref_message_view_text">View options</string>
    <string name="pref_message_view_default" translatable="false">h</string>
    <string-array name="pref_message_view_entries">
        <item>Flat</item>
        <item>Hierarchial</item>
    </string-array>
    <string-array name="pref_message_view_values" translatable="false">
        <item>f</item>
        <item>h</item>
    </string-array>
    <string name="title_activity_write_message">Write message</string>
    <string name="title_activity_server_settings">Server settings</string>
    <string name="send_success">Message sent.</string>
    <string name="send_error">Error while sending message!</string>
    <string name="sync">Sync</string>

    <string name="crash_toast_text">Ooooops ! I crashed, but a report can be sent to my developer to help fix the issue!</string>

    <string name="crash_dialog_title">NewsReader has crashed :(</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the application to stop. Please help me fix this by sending me error data, all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>
    <string name="action_testcrash">Crash app! (debug)</string>
    <string name="img_reply">Reply</string>
    <string name="img_header">Show header</string>
    <string name="img_new_message">New message</string>
    <string name="img_children">More messages</string>
    <string name="img_add_server">Add server</string>
    <string name="img_edit_subscriptions">Edit subscriptions</string>
    <string name="server">Server</string>
    <string name="ssl">SSL / TLS</string>
    <string name="error_password_enc">Error! Password could not be encrypted. Please try again.</string>
    <string name="error_password_dec">Error! Password could not be decrypted.</string>

</resources>
