<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:text="@string/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/txt_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:lines="1"
        android:inputType="text"
        android:hint="@string/name_hint"/>

    <TextView
        android:text="@string/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:lines="1"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"/>

    <TextView
        android:text="@string/signature"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/txt_signature"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:lines="2"
        android:hint="@string/signature_hint"
        android:inputType="textMultiLine"
        android:gravity="top|start" />

    <TextView
        android:text="@string/msg_load"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"/>

    <Spinner
        android:id="@+id/sp_msgkeep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/sync_period_entries"
        android:prompt="@string/sync_prompt_initial" />

    </LinearLayout>

</ScrollView>