<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context="org.random_access.org.newsreader.EditSubscriptionsActivity">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/groups_all"
            android:text="@string/all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
        <RadioButton
            android:id="@+id/groups_selection"
            android:text="@string/selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </RadioGroup>

    <EditText
        android:id="@+id/groups_search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_subscription"
        android:inputType="textFilter">
        <requestFocus/>
    </EditText>

    <ListView android:id="@+id/groups_list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>
