<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        tools:context="org.random_access.newsreader.WriteMessageActivity">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>
                <TextView
                    android:text="@string/from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="@dimen/abc_text_size_small_material"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txt_from"
                    android:text="@string/hello_world"
                    android:ellipsize="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="@dimen/abc_text_size_small_material"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:textStyle="italic" />
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="@dimen/abc_text_size_small_material"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txt_newsgroup"
                    android:text="@string/hello_world"
                    android:ellipsize="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="@dimen/abc_text_size_small_material"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:textStyle="italic" />
            </TableRow>

        </TableLayout>

        <EditText
            android:id="@+id/txt_subject"
            android:hint="@string/enter_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="@dimen/abc_text_size_small_material"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/txt_message"
            android:hint="@string/enter_message"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:inputType="textMultiLine"
            android:minLines="5"
            android:textSize="@dimen/abc_text_size_small_material"
            android:textColor="@color/black"
            android:windowSoftInputMode="stateVisible|adjustResize"
            android:gravity="top"/>

    </LinearLayout>

</ScrollView>